--- a/components/_overrides.scss
+++ b/components/_overrides.scss
@@ -10,6 +10,10 @@ html[lang=ru] .header__branding {
 
     .brand-body {
         max-width: 140px;
+
+        @media (min-width: 480px) and (max-width: 560px) {
+            display: none;
+        }
     }
 
     .top-title a {
@@ -18,22 +22,45 @@ html[lang=ru] .header__branding {
 
     .site-title-secondary {
         max-width: 250px;
+        padding-top: 0;
+        padding-bottom: 0;
 
         span {
             font-size: 1.1rem;
+        }
+
+        @media (min-width: 480px) and (max-width: 560px) {
+            border-left: none;
+        }
+    }
+
+    .site-branding.two-lines {
+        .brand-body {
+            max-width: 140px;
+        }
+    
+        .top-title a {
+            font-size: 1.1rem;
+        }
+    
+        .site-title-secondary {
+   
+            span {
+                font-size: 1.1rem;
+            }
         }
     }
 }
 
 html[lang=es] .header__branding {
-    max-width: 540px;
+    max-width: 600px;
 
     .brand-body {
         max-width: 100px;
     }
 
     .site-title-secondary {
-        max-width: 260px;
+        max-width: 250px;
     }
 
     @include large {
@@ -42,6 +69,21 @@ html[lang=es] .header__branding {
         }
         .top-title a {
             font-size: 1.8rem;
+        }
+    }
+    
+    .site-branding.two-lines {
+        .brand-body {
+            max-width: 100px;
+        }
+    
+        @include large {
+            .brand-body {
+                max-width: 130px;
+            }
+            .top-title a {
+                font-size: 1.8rem;
+            }
         }
     }
 }
