--- a/components/02-molecules/featured-media/featured-media.twig
+++ b/components/02-molecules/featured-media/featured-media.twig
@@ -3,7 +3,7 @@
     {% set has_video = true %}
     {% set video_embed_url = item['#node'].field_featured_video[0].entity.field_media_oembed_video.value|oembed_url %}
     {% set link_title = item['#node'].getTitle %}
-    {% set image_alt = 'Play video for'|t ~ link_title %}
+    {% set image_alt = 'Play video for'|t ~ ' ' ~ link_title %}
   {% else %}
     {% set has_video = false %}
   {% endif %}
@@ -18,7 +18,7 @@
   {% set image_src = item.image_src %}
   {% if item.video_embed_url %}
     {% set has_video = true %}
-    {% set image_alt = 'Play video for'|t ~ link_title %}
+    {% set image_alt = 'Play video for'|t ~ ' ' ~ link_title %}
   {% else %}
     {% set image_alt = item.image_alt %}
     {% set has_video = false %}
