--- a/components/03-organisms/meeting-list/_meeting-list.scss
+++ b/components/03-organisms/meeting-list/_meeting-list.scss
@@ -5,7 +5,7 @@
     background-color: #777;
     color: #fff;
     display: flex;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     flex-wrap: wrap;
 
     &--date {
