--- a/components/03-organisms/site/site-header/_site-header.scss
+++ b/components/03-organisms/site/site-header/_site-header.scss
@@ -218,7 +218,7 @@
     .menu--open & {
       display:block;
       position: absolute;
-      z-index: 11;
+      z-index: 101;
       top: 8rem;
 
       body.toolbar-vertical & {
@@ -310,7 +310,7 @@
 
       .menu--open & {
         position: relative;
-        z-index: 10;
+        z-index: 100;
         top: 0;
   
         left:0;
@@ -401,6 +401,101 @@
     
     @include breakpoint($screen-md-min[]) {
       display: block;
+    }
+  }
+
+  &__useraccountmenu {
+    display: none;
+
+    .menu--open & {
+      display:block;
+      position: absolute;
+      z-index: 11;
+      top: 11rem;
+      left: 0;
+      transform: none;
+      width: auto;
+      right: 0;
+      background-color: #eee;
+      margin-top: 1.5rem;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+
+      body.toolbar-vertical & {
+        top: calc(11rem + 39px);
+      }
+  
+    }
+
+    body.toolbar-vertical.menu--open & {
+      top: calc(11rem + 39px);
+    }
+
+    #user-account-menu-toggle {
+      font-size: 1.4rem;
+      width: 2.4rem;
+      height: 2.4rem;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      background-color: transparent;
+      cursor: default;
+    }
+
+    #user-account-nav {
+      background-color:#eee;
+      padding: 1rem;
+      min-width: 200px;
+    }
+
+    .user-account-menu {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+
+      li {
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+
+        &:last-child {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+
+    @include breakpoint($screen-md-min) {
+      display: block;
+      margin-inline-start: 1rem;
+      position: relative;
+
+      #user-account-menu-toggle {
+        cursor: pointer;
+      }
+
+      #user-account-menu-toggle.toggle-expand--open {
+        background-color:#eee;
+      }
+
+      #user-account-nav.user-account-nav--open {
+        display: block;
+      }
+
+      #user-account-nav {
+        display: none;
+        position: absolute;
+        top: 2.4rem;
+        right: 0;
+        background-color:#eee;
+        padding: 1rem;
+        z-index: 101;
+        min-width: 180px;
+      }
+  
+      .menu--open & {
+      }
     }
   }
 
