--- a/components/03-organisms/site/site-brandbar/_site-brandbar.scss
+++ b/components/03-organisms/site/site-brandbar/_site-brandbar.scss
@@ -2,6 +2,9 @@
   line-height: 2;
   background-color: #f2f2f2;
   border-bottom: 5px solid $un-blue;
+  z-index: 100;
+  display: block;
+  position: relative;
   
   .container > .row {
     display: flex;
