--- a/components/03-organisms/site/site-header/_site-header-useraccountmenu.twig
+++ b/components/03-organisms/site/site-header/_site-header-useraccountmenu.twig
@@ -1,13 +1,15 @@
 {{ attach_library('un_geneva_design_system/user-account-menu') }}
 
-{% if not directory %}
+{% if directory %}
+  {% set menu_items = content['#items'] %}
+{% else %}
   {% set menu_items = useraccount %}
 {% endif %}
-{% if currentUser.isAnonymous %}
+{% if not logged_in or user.isAnonymous %}
   <a class="login-link" href="{{ path('user.login') }}" title="{{ 'Log in'|t }}"><i class="fa fa-user"></i>&nbsp;{{ 'Log in'|t }}</a>
 {% else %}
 <button id="user-account-menu-toggle" aria-expanded="false" aria-label="User account menu" value="User account menu" aria-haspopup="true" aria-controls="user-account-nav">
-  <i class="fa fa-user"></i>&nbsp;<div class="user-account-label">{{ 'Hello @username'|t({'@username': currentUser.displayName}) }}</div>
+  <i class="fa fa-user"></i>&nbsp;<div class="user-account-label">{{ 'Hello @username asasasfasf@domain.org'|t({'@username': user.displayName}) }}</div>
   </button>
 <nav aria-label="user account menu">
   <div id="user-account-nav" class="user-account-nav">
