--- a/components/03-organisms/site/site-header/_site-header.scss
+++ b/components/03-organisms/site/site-header/_site-header.scss
@@ -33,6 +33,7 @@
 
   &__branding {
     margin-right: 0;
+    z-index: 100;
 
     .site-branding {
       display: flex;
@@ -404,6 +405,21 @@
     }
   }
 
+  &__menu {
+    .menu--open &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-color: $white;
+      z-index: 99;
+    }
+  
+  }
+
   &__useraccountmenu {
     display: none;
 
@@ -424,7 +440,7 @@
     .menu--open & {
       display:block;
       position: absolute;
-      z-index: 11;
+      z-index: 101;
       top: 11rem;
       left: 0;
       transform: none;
@@ -461,10 +477,15 @@
       padding: 0;
       min-width: 200px;
       margin-top: 0.5rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      border-radius: 4px;
+      border: none;
 
       .user-account-label {
         font-size: 1rem;
         font-weight: 500;
+        text-align: start;
       }
     }
 
@@ -499,11 +520,13 @@
         min-width: 0;
         white-space: nowrap;
         margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
         padding: 0 1rem;
+        border: 2px solid #4b4b4b;
       }
 
       #user-account-menu-toggle.toggle-expand--open {
-        background-color:#eee;
       }
 
       #user-account-nav.user-account-nav--open {
@@ -514,12 +537,13 @@
         display: none;
         position: absolute;
         top: 2.4rem;
+        left: 0;
         right: 0;
         background-color:#eee;
         padding: 1rem;
         z-index: 101;
-        min-width: 180px;
         padding-top: 0;
+        min-width: 0;
       }
   
       .menu--open & {
