UNOGWEB-966 : Making 'sr-only' not selected when copying.

--- a/components/00-base/03-site/_base.scss
+++ b/components/00-base/03-site/_base.scss
@@ -136,3 +136,11 @@ button, input, optgroup, select, textarea {
 .text-align-center {
   text-align: center;
 }
+
+/* UNOGWEB-966 */
+.sr-only {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
