--- a/components/03-organisms/site/site-header/_site-header.scss
+++ b/components/03-organisms/site/site-header/_site-header.scss
@@ -197,7 +197,7 @@
 
       @include small {
         flex-direction: row;
-        text-align: left;
+        text-align: start;
       }
     }
   }
