Featured media not using translation

--- a/components/02-molecules/featured-media/featured-media.twig
+++ b/components/02-molecules/featured-media/featured-media.twig
@@ -1,17 +1,19 @@
 {% if directory %}
-  {% if item['#node'].hasField('field_featured_video') and item['#node'].field_featured_video[0].entity %}
+  {% set translated_item = item['#node'].hasTranslation(current_language) ? item['#node'].getTranslation(current_language) : item['#node'] %}
+
+  {% if translated_item.hasField('field_featured_video') and translated_item.field_featured_video[0].entity %}
     {% set has_video = true %}
-    {% set video_embed_url = item['#node'].field_featured_video[0].entity.field_media_oembed_video.value|oembed_url %}
-    {% set link_title = item['#node'].getTitle %}
+    {% set video_embed_url = translated_item.field_featured_video[0].entity.field_media_oembed_video.value|oembed_url %}
+    {% set link_title = translated_item.getTitle %}
     {% set image_alt = 'Play video for'|t ~ ' ' ~ link_title %}
   {% else %}
     {% set has_video = false %}
   {% endif %}
 
-  {% if item['#node'].hasField('field_featured_image') and item['#node'].field_featured_image[0].entity %}
-    {% set image_src = item['#node'].field_featured_image[0].entity|file_uri|image_style('showcase') %}
-  {% elseif item['#node'].hasField('field_featured_video') and item['#node'].field_featured_video[0].entity %}
-    {% set image_src = item['#node'].field_featured_video[0].entity.thumbnail|file_uri|image_style('showcase') %}
+  {% if translated_item.hasField('field_featured_image') and translated_item.field_featured_image[0].entity %}
+    {% set image_src = translated_item.field_featured_image[0].entity.hasTranslation(current_language) ? translated_item.field_featured_image[0].entity.getTranslation(current_language)|file_uri|image_style('showcase') : translated_item.field_featured_image[0].entity|file_uri|image_style('showcase') %}
+  {% elseif translated_item.hasField('field_featured_video') and translated_item.field_featured_video[0].entity %}
+    {% set image_src = translated_item.field_featured_video[0].entity.hasTranslation(current_language) ? translated_item.field_featured_video[0].entitygetTranslation(current_language).thumbnail|file_uri|image_style('showcase') : translated_item.field_featured_video[0].entity.thumbnail|file_uri|image_style('showcase') %}
   {% endif %}
 
 {% else %}
