UNOGWEB-958 Review date formats (adjust event date in arabic)

--- a/components/05-pages/events/_event.scss
+++ b/components/05-pages/events/_event.scss
@@ -137,7 +137,7 @@
     small {
         display: block;
         position: relative;
-        padding-left: 18px;
+        padding-inline-start: 18px;
 
         i.fa {
             position: absolute;
