--- a/components/05-pages/events/_events.scss
+++ b/components/05-pages/events/_events.scss
@@ -123,7 +123,7 @@
             }
           }
           .event-location small {
-            padding-left: 14px;
+            padding-inline-start: 14px;
           }
         }
       }
