Add support for non-breaking labels

--- a/components/_rtl.scss
+++ b/components/_rtl.scss
@@ -281,5 +281,8 @@ html[dir="rtl"] {
             right: 2px;
         }
     }
-}
 
+    a > span[dir="ltr"] {
+        white-space: nowrap;
+    }
+}
