--- a/components/00-base/03-site/_base.scss
+++ b/components/00-base/03-site/_base.scss
@@ -144,3 +144,7 @@ button, input, optgroup, select, textarea {
   -webkit-user-select: none;
   user-select: none;
 }
+
+.nobreak {
+  white-space: nowrap;
+}
