--- a/components/00-base/00-defaults/_04-fonts.scss
+++ b/components/00-base/00-defaults/_04-fonts.scss
@@ -104,4 +104,15 @@
     font-weight: normal;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'Noto Sans SC';
+    src: url('../fonts/NotoSansSC/NotoSansSC-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Noto Sans SC';
+    src: url('../fonts/NotoSansSC/NotoSansSC-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
