--- a/components/_overrides.scss
+++ b/components/_overrides.scss
@@ -92,11 +92,11 @@ html[lang="zh-hans"] {
     direction: rtl;
 
     body {
-        font-family: 'Noto Naskh Arabic', 'Roboto', 'Open Sans', 'Arial', sans-serif;
+        font-family: 'Noto Sans SC', 'Roboto', 'Open Sans', 'Arial', sans-serif;
     }
 
     h1, h2, h3, h4, h5, h6 {
-        font-family: 'Noto Kufi Arabic', 'Roboto', 'Open Sans', 'Arial', sans-serif;
+        font-family: 'Noto Sans SC', 'Roboto', 'Open Sans', 'Arial', sans-serif;
     }
 }
 
