User menu tweaks

--- a/components/03-organisms/site/site-header/_site-header.scss
+++ b/components/03-organisms/site/site-header/_site-header.scss
@@ -548,6 +548,14 @@
   
       .menu--open & {
       }
+
+      .user-account-menu {
+        li {
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
   }
 
